# mandelbrot

./: .gitignore  CMakeLists.txt  CMakeSettings.json  main.c
image_generator/: CMakeLists.txt  README.md  complex_math.c  complex_math.h  mandelbrot.c  mandelbrot.h  set_determination.c  set_determination.h
math/: CMakeLists.txt  complex.c  complex.h
test/: CMakeLists.txt  CmakeLists.txt  mandel_test.c  support.c  support.h  test_complex.c  test_complex.h  test_mandelbrot.c  test_mandelbrot.h
v1/: CMakeLists.txt  basic.sh  mandel.c
v2/: CMakeLists.txt  basic.sh  image.c  image.h  main.c  mandel.c  mandel.h
